[gd_scene load_steps=10 format=3 uid="uid://jahvotsuh0jw"]

[ext_resource type="Script" path="res://World.gd" id="1_7uejp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_41ffx"]
albedo_color = Color(0.207843, 0.592157, 0.729412, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_6l4v2"]
material = SubResource("StandardMaterial3D_41ffx")
size = Vector2(50, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h14uv"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_5a3fs"]
material = SubResource("StandardMaterial3D_h14uv")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n1naf"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_nsxyp"]
material = SubResource("StandardMaterial3D_n1naf")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pmqqn"]
albedo_color = Color(0, 0.329412, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_twrr7"]
material = SubResource("StandardMaterial3D_pmqqn")

[node name="Node3D" type="Node3D"]
script = ExtResource("1_7uejp")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 17.802, 0)
light_energy = 2.85
shadow_enabled = true

[node name="Ground" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, 0)
mesh = SubResource("PlaneMesh_6l4v2")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 100, 0)
projection = 1
fov = 162.9
size = 80.0

[node name="EndPoint" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.85547, 0, -15.2826)
cast_shadow = 0
mesh = SubResource("BoxMesh_5a3fs")

[node name="StartPoint" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.85182, 0, 14.6854)
cast_shadow = 0
mesh = SubResource("BoxMesh_nsxyp")

[node name="StartHandle" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.9093, 0, 6.36801)
cast_shadow = 0
mesh = SubResource("SphereMesh_twrr7")

[node name="EndHandle" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.7215, 0, -14.3389)
cast_shadow = 0
mesh = SubResource("SphereMesh_twrr7")
skeleton = NodePath("../StartHandle")
